Implemented patch filtering
